Prepare repository for application
The fluid, geodesic, geometry, tests, and benchmark folders have been deleted since they will not be used for this application. Also, a results folder was generated to dump all the simulation, analysis, and plotting results. This folder will remain empty in the public repository. A configure.sh script was also created to expedite configuration with autotools.

--- a/runs/Makefile.am
+++ b/runs/Makefile.am
@@ -3,22 +3,34 @@
 AM_CXXFLAGS = $(MPI_CFLAGS)
 AM_LDFLAGS = $(MPI_LIBS)
 
-bin_PROGRAMS = gcr_modulation_example postprocess_gcr_modulation_results
+bin_PROGRAMS = main_sim_HS_modulation_parker_helium main_sim_HS_modulation_parker_electrons \
+               main_process_HS_modulation_spectrum main_process_HS_modulation_time \
+               main_integrate_HS_modulation_spectra_along_path
 
 SPBL_COMMON_DIR = ../common
 SPBL_SOURCE_DIR = ../src
 
-gcr_modulation_example_SOURCES = gcr_modulation_example.cc \
+main_sim_HS_modulation_parker_helium_SOURCES = main_sim_HS_modulation_parker_helium.cc \
    $(SPBL_SOURCE_DIR)/simulation.cc \
    $(SPBL_SOURCE_DIR)/simulation.hh \
    $(SPBL_SOURCE_DIR)/trajectory_parker.cc \
    $(SPBL_SOURCE_DIR)/trajectory_parker.hh \
    $(SPBL_SOURCE_DIR)/trajectory_base.cc \
    $(SPBL_SOURCE_DIR)/trajectory_base.hh \
+   $(SPBL_SOURCE_DIR)/background_solarwind_termshock.cc \
+   $(SPBL_SOURCE_DIR)/background_solarwind_termshock.hh \
    $(SPBL_SOURCE_DIR)/background_solarwind.cc \
    $(SPBL_SOURCE_DIR)/background_solarwind.hh \
    $(SPBL_SOURCE_DIR)/background_base.cc \
    $(SPBL_SOURCE_DIR)/background_base.hh \
+   $(SPBL_SOURCE_DIR)/server_base.cc \
+   $(SPBL_SOURCE_DIR)/server_base.hh \
+   $(SPBL_SOURCE_DIR)/cache_lru.cc \
+   $(SPBL_SOURCE_DIR)/cache_lru.hh \
+   $(SPBL_SOURCE_DIR)/block_base.cc \
+   $(SPBL_SOURCE_DIR)/block_base.hh \
+   $(SPBL_SOURCE_DIR)/reader_cartesian.cc \
+   $(SPBL_SOURCE_DIR)/reader_cartesian.hh \
    $(SPBL_SOURCE_DIR)/background_base_visual.cc \
    $(SPBL_SOURCE_DIR)/boundary_momentum.cc \
    $(SPBL_SOURCE_DIR)/boundary_momentum.hh \
@@ -28,8 +40,6 @@ gcr_modulation_example_SOURCES = gcr_modulation_example.cc \
    $(SPBL_SOURCE_DIR)/boundary_time.hh \
    $(SPBL_SOURCE_DIR)/boundary_base.cc \
    $(SPBL_SOURCE_DIR)/boundary_base.hh \
-   $(SPBL_SOURCE_DIR)/initial_time.cc \
-   $(SPBL_SOURCE_DIR)/initial_time.hh \
    $(SPBL_SOURCE_DIR)/initial_space.cc \
    $(SPBL_SOURCE_DIR)/initial_space.hh \
    $(SPBL_SOURCE_DIR)/initial_momentum.cc \
@@ -57,35 +67,152 @@ gcr_modulation_example_SOURCES = gcr_modulation_example.cc \
    $(SPBL_COMMON_DIR)/matrix.hh \
    $(SPBL_COMMON_DIR)/vectors.cc \
    $(SPBL_COMMON_DIR)/vectors.hh \
-   $(SPBL_COMMON_DIR)/multi_index.hh \
-   $(SPBL_COMMON_DIR)/simple_array.hh \
-   $(SPBL_COMMON_DIR)/arithmetic.hh \
    $(SPBL_COMMON_DIR)/params.cc \
    $(SPBL_COMMON_DIR)/params.hh \
    $(SPBL_COMMON_DIR)/physics.cc \
    $(SPBL_COMMON_DIR)/physics.hh \
    $(SPBL_COMMON_DIR)/random.hh \
    $(SPBL_COMMON_DIR)/rk_config.hh \
-   $(SPBL_COMMON_DIR)/definitions.hh \
-   $(SPBL_COMMON_DIR)/print_warn.hh
+   $(SPBL_COMMON_DIR)/multi_index.hh \
+   $(SPBL_COMMON_DIR)/simple_array.hh \
+   $(SPBL_COMMON_DIR)/print_warn.hh \
+   $(SPBL_COMMON_DIR)/definitions.hh
 
-gcr_modulation_example_LDADD = $(MPI_LIBS) $(GSL_LIBS)
+main_sim_HS_modulation_parker_helium_LDADD = $(MPI_LIBS) $(GSL_LIBS)
 
-postprocess_gcr_modulation_results_SOURCES = postprocess_gcr_modulation_results.cc \
+
+main_sim_HS_modulation_parker_electrons_SOURCES = main_sim_HS_modulation_parker_electrons.cc \
+   $(SPBL_SOURCE_DIR)/simulation.cc \
+   $(SPBL_SOURCE_DIR)/simulation.hh \
+   $(SPBL_SOURCE_DIR)/trajectory_parker.cc \
+   $(SPBL_SOURCE_DIR)/trajectory_parker.hh \
+   $(SPBL_SOURCE_DIR)/trajectory_base.cc \
+   $(SPBL_SOURCE_DIR)/trajectory_base.hh \
+   $(SPBL_SOURCE_DIR)/background_solarwind_termshock.cc \
+   $(SPBL_SOURCE_DIR)/background_solarwind_termshock.hh \
+   $(SPBL_SOURCE_DIR)/background_solarwind.cc \
+   $(SPBL_SOURCE_DIR)/background_solarwind.hh \
+   $(SPBL_SOURCE_DIR)/background_base.cc \
+   $(SPBL_SOURCE_DIR)/background_base.hh \
+   $(SPBL_SOURCE_DIR)/server_base.cc \
+   $(SPBL_SOURCE_DIR)/server_base.hh \
+   $(SPBL_SOURCE_DIR)/cache_lru.cc \
+   $(SPBL_SOURCE_DIR)/cache_lru.hh \
+   $(SPBL_SOURCE_DIR)/block_base.cc \
+   $(SPBL_SOURCE_DIR)/block_base.hh \
+   $(SPBL_SOURCE_DIR)/reader_cartesian.cc \
+   $(SPBL_SOURCE_DIR)/reader_cartesian.hh \
+   $(SPBL_SOURCE_DIR)/background_base_visual.cc \
+   $(SPBL_SOURCE_DIR)/boundary_momentum.cc \
+   $(SPBL_SOURCE_DIR)/boundary_momentum.hh \
+   $(SPBL_SOURCE_DIR)/boundary_space.cc \
+   $(SPBL_SOURCE_DIR)/boundary_space.hh \
+   $(SPBL_SOURCE_DIR)/boundary_time.cc \
+   $(SPBL_SOURCE_DIR)/boundary_time.hh \
+   $(SPBL_SOURCE_DIR)/boundary_base.cc \
+   $(SPBL_SOURCE_DIR)/boundary_base.hh \
+   $(SPBL_SOURCE_DIR)/initial_space.cc \
+   $(SPBL_SOURCE_DIR)/initial_space.hh \
+   $(SPBL_SOURCE_DIR)/initial_momentum.cc \
+   $(SPBL_SOURCE_DIR)/initial_momentum.hh \
+   $(SPBL_SOURCE_DIR)/initial_base.cc \
+   $(SPBL_SOURCE_DIR)/initial_base.hh \
+   $(SPBL_SOURCE_DIR)/diffusion_other.cc \
+   $(SPBL_SOURCE_DIR)/diffusion_other.hh \
+   $(SPBL_SOURCE_DIR)/diffusion_base.cc \
+   $(SPBL_SOURCE_DIR)/diffusion_base.hh \
+   $(SPBL_SOURCE_DIR)/distribution_other.cc \
+   $(SPBL_SOURCE_DIR)/distribution_other.hh \
+   $(SPBL_SOURCE_DIR)/distribution_templated.cc \
+   $(SPBL_SOURCE_DIR)/distribution_templated.hh \
+   $(SPBL_SOURCE_DIR)/distribution_base.cc \
+   $(SPBL_SOURCE_DIR)/distribution_base.hh \
+   $(SPBL_SOURCE_DIR)/traj_config.hh \
+   $(SPBL_SOURCE_DIR)/server_config.hh \
+   $(SPBL_COMMON_DIR)/workload_manager.hh \
+   $(SPBL_COMMON_DIR)/mpi_config.cc \
+   $(SPBL_COMMON_DIR)/mpi_config.hh \
+   $(SPBL_COMMON_DIR)/data_container.hh \
+   $(SPBL_COMMON_DIR)/data_container.cc \
    $(SPBL_COMMON_DIR)/matrix.cc \
    $(SPBL_COMMON_DIR)/matrix.hh \
    $(SPBL_COMMON_DIR)/vectors.cc \
    $(SPBL_COMMON_DIR)/vectors.hh \
+   $(SPBL_COMMON_DIR)/params.cc \
+   $(SPBL_COMMON_DIR)/params.hh \
+   $(SPBL_COMMON_DIR)/physics.cc \
+   $(SPBL_COMMON_DIR)/physics.hh \
+   $(SPBL_COMMON_DIR)/random.hh \
+   $(SPBL_COMMON_DIR)/rk_config.hh \
    $(SPBL_COMMON_DIR)/multi_index.hh \
    $(SPBL_COMMON_DIR)/simple_array.hh \
-   $(SPBL_COMMON_DIR)/arithmetic.hh \
+   $(SPBL_COMMON_DIR)/print_warn.hh \
+   $(SPBL_COMMON_DIR)/definitions.hh
+
+main_sim_HS_modulation_parker_electrons_LDADD = $(MPI_LIBS) $(GSL_LIBS)
+
+main_process_HS_modulation_spectrum_SOURCES = main_process_HS_modulation_spectrum.cc \
+   $(SPBL_SOURCE_DIR)/distribution_other.cc \
+   $(SPBL_SOURCE_DIR)/distribution_other.hh \
+   $(SPBL_SOURCE_DIR)/distribution_templated.cc \
+   $(SPBL_SOURCE_DIR)/distribution_templated.hh \
+   $(SPBL_SOURCE_DIR)/distribution_base.cc \
+   $(SPBL_SOURCE_DIR)/distribution_base.hh \
+   $(SPBL_COMMON_DIR)/matrix.cc \
+   $(SPBL_COMMON_DIR)/matrix.hh \
+   $(SPBL_COMMON_DIR)/vectors.cc \
+   $(SPBL_COMMON_DIR)/vectors.hh \
    $(SPBL_COMMON_DIR)/params.cc \
    $(SPBL_COMMON_DIR)/params.hh \
    $(SPBL_COMMON_DIR)/physics.cc \
    $(SPBL_COMMON_DIR)/physics.hh \
    $(SPBL_COMMON_DIR)/data_container.hh \
    $(SPBL_COMMON_DIR)/data_container.cc \
+   $(SPBL_COMMON_DIR)/multi_index.hh \
+   $(SPBL_COMMON_DIR)/simple_array.hh \
    $(SPBL_COMMON_DIR)/definitions.hh \
    $(SPBL_COMMON_DIR)/print_warn.hh
 
-postprocess_gcr_modulation_results_LDADD = $(MPI_LIBS) $(GSL_LIBS)
+main_process_HS_modulation_spectrum_LDADD = $(MPI_LIBS) $(GSL_LIBS)
+
+main_process_HS_modulation_time_SOURCES = main_process_HS_modulation_time.cc \
+   $(SPBL_SOURCE_DIR)/distribution_other.cc \
+   $(SPBL_SOURCE_DIR)/distribution_other.hh \
+   $(SPBL_SOURCE_DIR)/distribution_templated.cc \
+   $(SPBL_SOURCE_DIR)/distribution_templated.hh \
+   $(SPBL_SOURCE_DIR)/distribution_base.cc \
+   $(SPBL_SOURCE_DIR)/distribution_base.hh \
+   $(SPBL_COMMON_DIR)/matrix.cc \
+   $(SPBL_COMMON_DIR)/matrix.hh \
+   $(SPBL_COMMON_DIR)/vectors.cc \
+   $(SPBL_COMMON_DIR)/vectors.hh \
+   $(SPBL_COMMON_DIR)/params.cc \
+   $(SPBL_COMMON_DIR)/params.hh \
+   $(SPBL_COMMON_DIR)/physics.cc \
+   $(SPBL_COMMON_DIR)/physics.hh \
+   $(SPBL_COMMON_DIR)/data_container.hh \
+   $(SPBL_COMMON_DIR)/data_container.cc \
+   $(SPBL_COMMON_DIR)/multi_index.hh \
+   $(SPBL_COMMON_DIR)/simple_array.hh \
+   $(SPBL_COMMON_DIR)/definitions.hh \
+   $(SPBL_COMMON_DIR)/print_warn.hh
+
+main_process_HS_modulation_time_LDADD = $(MPI_LIBS) $(GSL_LIBS)
+
+main_integrate_HS_modulation_spectra_along_path_SOURCES = main_integrate_HS_modulation_spectra_along_path.cc \
+   $(SPBL_COMMON_DIR)/matrix.cc \
+   $(SPBL_COMMON_DIR)/matrix.hh \
+   $(SPBL_COMMON_DIR)/vectors.cc \
+   $(SPBL_COMMON_DIR)/vectors.hh \
+   $(SPBL_COMMON_DIR)/params.cc \
+   $(SPBL_COMMON_DIR)/params.hh \
+   $(SPBL_COMMON_DIR)/physics.cc \
+   $(SPBL_COMMON_DIR)/physics.hh \
+   $(SPBL_COMMON_DIR)/data_container.hh \
+   $(SPBL_COMMON_DIR)/data_container.cc \
+   $(SPBL_COMMON_DIR)/multi_index.hh \
+   $(SPBL_COMMON_DIR)/simple_array.hh \
+   $(SPBL_COMMON_DIR)/definitions.hh \
+   $(SPBL_COMMON_DIR)/print_warn.hh
+
+main_integrate_HS_modulation_spectra_along_path_LDADD = $(MPI_LIBS) $(GSL_LIBS)
